--- a/timber/sfml-template.vcxproj
+++ b/timber/sfml-template.vcxproj
@@ -18,6 +18,23 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Framework\Framework.cpp" />
+    <ClCompile Include="Framework\Manager\ResourceManager.cpp" />
+    <ClCompile Include="Framework\Manager\SceneManager.cpp" />
+    <ClCompile Include="Framework\Object\Background.cpp" />
+    <ClCompile Include="Framework\Object\Player.cpp" />
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Framework\Enum.h" />
+    <ClInclude Include="Framework\Framework.h" />
+    <ClInclude Include="Framework\Macro.h" />
+    <ClInclude Include="Framework\Manager\ResourceManager.h" />
+    <ClInclude Include="Framework\Manager\SceneManager.h" />
+    <ClInclude Include="Framework\Object\Background.h" />
+    <ClInclude Include="Framework\Object\Player.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -147,9 +164,6 @@
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;sfml-network-d.lib;sfml-audio-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="main.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
